Indique par la couleur les événéments déjà passés (fix #27)

--- a/css/timetable.css
+++ b/css/timetable.css
@@ -96,3 +96,9 @@ ul.inline > li {
     display: inline;
     padding: 0px 2px;
 }
+
+
+.fc-event-past {
+    --fc-event-bg-color: rgba(55, 136, 216,0.6);  /* default is rgb(55, 136, 216); */
+    color: rgba(55, 136, 216,0.6); /* default is rgb(10, 88, 202) */
+}
