fix color when multiple events overlap

--- a/css/timetable.css
+++ b/css/timetable.css
@@ -99,8 +99,10 @@ ul.inline > li {
 
 
 .fc-event-past {
-    --fc-event-bg-color: rgba(55, 136, 216,0.6);  /* default is rgb(55, 136, 216); */
-    color: rgba(55, 136, 216,0.6); /* default is rgb(10, 88, 202) */
+    /* default is rgb(55, 136, 216) which is the same as hsl(210, 67%, 53%) */
+    --fc-event-bg-color: hsl(210, 67%, 66%);
+    /* default is rgb(10, 88, 202) */
+    color: var(--fc-event-bg-color);
 }
 
 :root {
